<resources>
    <string name="Tedipermana">Tedipermana</string>
    <string name="sound1">Sound1</string>
    <string name="play">Play Sound</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">GotahFidz</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Halo, selamat datang!</string>
    <string name="label_button">Set Alarm</string>
    <string name="batal">Batalkan Alarm</string>
    <string name="aPP">appbar_scrolling_view_behavior</string>
    <string name="title_activity_main1">Main1Activity</string>
    <string name="title_activity_tambah">TambahActivity</string>
    <string name="Exit">Exit</string>
    <string name="slogan">Pesan Jasa Photo Lebih Mudah!</string>
    <string name="signin">SIGN IN</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email Address</string>
    <string name="name_label">Nama</string>
    <string name="status_label">Pekerjaan</string>
    <string name="explore">EXPLORE NOW</string>
    <string name="title_activity_home">HomeAct</string>
    <string name="telvon">No.Handphone</string>
    <string name="newacc">NEW ACCOUNT</string>
    <string name="nama_label">Name</string>
    <string name="bio_label">Status</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_explore">Explore Now</string>
    <string name="slogan_regis_one">Please fill up the forms below \nfor informations</string>
    <string name="slogan_regis_two">Let the world knows yourself\nmore better and ever</string>
    <string name="Tap_Here_ToSart">Tap here to start</string>
    <string name="banner_ad_unitid">ca-app-pub-7120050676645894/5256340363</string>
    <string name="agora_app_id">7079ded5481f4f748d7b8feeb5fa0ad6</string>
    <string name="agora_access_token">fd9071f6a97e48bc9057a69ca77b5191</string>
    <string name="justify">
      Berikut ini adalah 14 tips cara untuk menghafal Al-Quran adalah sebagai berikut :
    </string>
    <string name="justify1">
        Pertama kali seseorang yang ingin menghafal Al-Quran hendaknya mengikhlaskan niatnya karena Allah saja.
        Dengan niat ikhlas, maka Allah akan membantu anda dan menjauhkan anda dari rasa malas dan bosan. Suatu pekerjaan yang diniatkan ikhlas,
        biasanya akan terus dan tidak berhenti. Berbeda kalau niatnya hanya mengejar materi ujian atau hanya ingin ikut perlombaan,
        atau hanya karena yang lainnya.
    </string>
    <string name="justify2">
        Hendaknya setelah itu ia melakukan shalat hajat dengan memohon kepada Allah agar dimudahkan didalam menghafal Al-Quran.
        Waktu shalat hajat ini tidak ditentukan dan doanya diserahkan kepada masing-masing pribadi.
        Hal ini sebagai mana yang diriwayat Hudzaifah yang berkata :
        ”bahwasanya Rosulullah jika ditimpa sesuatu masalah beliaw langsung mengerjakan shalat”
    </string>
    <string name="justify3">
        Memperbanyak doa untuk menghafal Al-Quran. Doa ini memang tidak terdapat dalam hadist,
        akan tetapi seorang muslim bisa berdoa menurut kemampuan yang dibahasnya masing-masing.
        Mungkin anda bisa berdoa seperti ini, Yallah berikanlah kepada saya taufik untuk bisa menghafal Al-Quran ,
        dan berilah saya kekuatan untuk terus membacanya siang dan malam  sesuai dengan ridha dan tuntunan-Mu, wahai yang maha pengasih.
    </string>
    <string name="justify4">
        Menentukan salah satu metode yang menghafal Al-Quran. Sebenernya banyak sekali metode yang bisa digunakan untuk menghafal Al-Quran,
        masing-masing orang mengambil metode yang sesuai dengan dirinya. Akan tetapi disini akan disebutkan dua metode yang sedang dipakai oleh sebagian kalangan,
        dan terbukti sangat efektif :

        </string>
    <string name="justify4a">
            Menghafal persatu halaman menggunakan mushaf yang sedang anda pegang. Anda membaca satu lembar yang mau anda hafal sebanyak 3 atau 5 kali yang akan dihafal secara benar,
            setelah itu anda baru mulai menghafalnya, setelah hafal satu lembar, baru anda pindah kehafalan lembaran ke berikutnya dengan cara yangsama. Dan jangan sampai pindah
            kehalaman berikutnya kecuali telah mengulangi, halaman – halaman yang sudah anda  hafal sebelumnya. Sebagai contoh jika anda menghafal satu lembar kemudian anda
            lanjutkan pada lembar kedua, maka sebelumnya menghafal halama ketiga, anda harus mengulangi dua halaman, sebelumnya kemudian sebelum menghafal halaman keempat,
            anda harus mengulangi tiga halaman yang sudah anda hafal. kemudian sebelum anda menghafal halaman ke lima, anda harus mengulangi keempat halaman yang sudah anda hafal.
            Jadi tiaphari anda mengulangi lima halaman : satu yang baru, empat yang lama, jika anda ingin menghafal halaman keenam, maka anda harus mengulangi dulu empat halaman
            sebelumnya, yaitu : halaman satu, dua, tiga, emapat, lima dan enam. Untuk halaman satu dan dua anda tinggal dulu, karena sudah terulangi lima kali. Jika anda ingin
            menghafal kehalaman ketujuh, maka anda harus mengulangi dulu empat halaman sebelumnya yaitu halaman, tiga, empat, lima, dan enam. Untuk halaman satu dan dua anda
            tinggal dulu karena sudah terulangi lima kali, dan begitu juga seterusnya.
        </string>
    <string name="justify4b">
          Perlu diperhatikan juga, setiap anda menghafal satu halaman sebaiknya ditambah satu ayat, dihalaman berikutnya, agar anda bisa menyambungkan hafalan antara satu halaman dengan halaman berikutnya.
        </string>
    <string name="justify4c">
            Metode Kedua :
            Menghafal perayat, yaitu membaca satu ayat yang mau anda hafal tiga atau lima kali secara benar,
            setelah itu, anda baru menghafal ayat tersebut. Setelah selesai, anda pindah keayat berikutnya  dengan cara yang sama,
            dan begitu seterusnya, sampai satu halaman, akan tetapi sebelumn pindah keayat berikutnya anda harus mengulangi apa yang suudah anda hafal,
            dari ayat sebelumnya. Setelah satu halaman, maka anda mengulanginya sebagaimana yang telah diterangkan pada metode pertama.
        </string>
    <string name="justify5">
        Untuk menunjang agar bacaan baik, hendaknya hafalan yang ada , anda setorkan kepada oranglain, agar orang tersebut membenarkan jika bacaan anda salah.
        Kadang, ketika menghafal sendiri sering terjadi kesalahan dalam bacaan, karena tidak pernah menyetorkan hafalan kepada orang lain,
        sehingga kesalahan itu terus sering terbawa dalam hafalan, dan menghafalnya dengan bacaan tersebut bertahun-tahun lamanya tanfa mengetahui bahwa itu salah,
        sampai orang lain yang mendengarkannya akhirnya memberitahkan kesalahan tersebut.
    </string>
    <string name="justify6">
        Factor lain agar bacaan anda baik, dan tidak salah, adalah memperbanyak untuk mendengar kaset-kaset bacaan Al-Quran  murratal dari syaikh yang mapan dalam bacaannya.
        Kalau bisa, tidak hanya sekedar mendengar sambil mengerjakan pekerjaan lain, akan tetapi mendengar dengan serius dan secara teratur.
    </string>
    <string name="justify7">
        Untuk menguatkan hafalan, hendaknya anda mengulangi halaman yang sudah anda hafal sesering mungkin, jangan sampai anda merasa sudah hafal satu halaman,
        kemudian anda tinggal hafalan tersebut dalam tempo yang lama, hal ini akan menyebabkan hilangnya hafalan tersebut.
    </string>
    <string name="justify8">
        Faktor lain yang menguatkan hafalan adalah mengunakan seluruh panca indra yang kita miliki. Maksudnya anda menghafal bukan hanya dengan menggunakan mata saja,
        akan tetapi dibarengi dengan membacanya dengan mulut anda, dan kalonperlu anda lanjutkan  degan menulisnya kedalam buku atau papan tulis.
        Ini sangat membantu hafalan seseorang. Ada beberapa teman dari marokko yang menceritakan bahwa menghafal Al-Qur’an yang diterapkan disebagian daerah
        dimaroko adalah dengan menuliskan hafalannya di papan kecil yang dipegang oleh masing-masing murid setelah mereka bisa menghafalnya diluarkepala,
        baru tulisan tersebut dicuci dengan air.
    </string>
    <string name="judul">
        13 KEUTAMAAN MENGHAFAL AL-QURAN
    </string>
    <string name="sabaq">Merupakan hafalan baru yang akan anda perdengarkan setiap hari kepada guru tahfidz. Sabak juga dikenal dengan istilah “setoran”. Hafalan baru bergantung kepada kemampuan dan kesungguhan  seorang pelajar. Biasaanya satu kali setoran antara satu atau dua halaman. Bagi yang mampu mendapatkan dua halaman (satu lembar) untuk setiap hari secara istiqamah, saya golongkan dalam golongan yang excellent. Bagi yang mampu istiqamah satu halaman saya kira sebagai golongan biasa dan bagi yang mendapat kurang dari itu masuk sebagai kelas lemah

    </string>
    <string name="sabaq1">Berikut ini adalah proses untuk melakukan menghafal Al-Qur’an dengan menggunakan metode sabaq yaitu dengan cara  menghafalkan Al-Qur’an pada ayat-ayat yang baru akan dihafalkan  seperti hafalan dibawah ini :

    </string>
    <string name="sabaq2">a)  Pada setiap penghafal Al-Qur’an, setiap harinya harus menghafal ayat Al-Qur’an surah yang baru akan di hafalkan misalnya pada surah Al-Qur’an Juz 30 surah An-Naba yang baru mulai akan dihafalkan, maka setelah hafal surah An Naba tersebut kemudian hafalan surah An Naba yang sudah kita hafal bisa langsung disetorkan kepada ustd pengajar, kemudian setelah selesai di setorkan hafalan surah An Naba, langsung melanjutkan ke surah selanjutnya yaitu surah An Nazi’at yang akan dihafalkan dan ikuti langkah selanjutnya sampai selesai menghafal juz 30.setelah selesai menghafal pada Al-Qur’an juz 30 kemudian melanjutkan ke hafalan Juz 29 dan ikuti langkah-langkah menghafal  Al-Qur’an seperti pada juz 30 sampai selesai atau khatam Al Qur’an.

    </string>
    <string name="sabqi"> metode sabqi Yaitu mengulang hafalan pada juz-juz atau ayat Al-Quran  yang sedang anda hafal. Bagi beberapa santri Tahfidz, seringkali istilah ini belum familiar bahkan asing di telinga mereka, sistem ini belum popular dan tidak digunakan secara resmi di beberapa pesantren Tahfidz

    </string>
    <string name="sabqi1">Berikut ini adalah proses tahapan untuk melakukan mengulang hafalan Al-Qur’an yang telah dihafalkan dengan menggunakan metode sabqi seperti pada contoh dibawah ini :

    </string>
    <string name="sabqi2">a)  Dalam proses melakukan hafalan sabqi atau mengulang hafalan adalah dengan cara mengulang halafan sebelumnya. Misalnya parapenghafal Al-Quran Sebelumnya sudah menghafal Al-Qur’an juz 30 dari surah An Naba sampai surah An Naas kemudian, para penghafal Al Qur’an melakukan mengulang hafalan pada juz 30 tersebut yang telah di hafalkan.

    </string>
    <string name="manzil">Dikenal juga dengan ‘Muraja’ah’ yaitu mengulang juz-juz atau ayat-ayat yang telah anda hafal. Contohnya jika seorang penghafal  sedang menghafal Al-Qur’an juz 30, maka juz 29 disebut Manzil </string>
    <string name="manzil1">Berikut ini adalah proses tahapan untuk melakukan muraja’ah hafalan al-qur’an yang telah selesai dihafalkan dengan menggunakan metode manzil seperti pada contoh dibawah ini : </string>
    <string name="manzil2">a)	Apabila para penghafal Al Qur’an sudah selesai menghafal pada Al Qur’an juz 30 dan juz 29 diwajibkan untuk  mengulang juz sebelumnya. Misalnya para penghafal Al Qur’an  sudah selesai menghafal Al Qur’an juz 30 dan juz 29  berarti para penghafal sudah mempunyai simpanan hafalan 2 juz yaitu juz 30 dan juz 29, maka pada hafalan 2 juz tersebut akan di ulang misalkan mengngulang hafalan juz 30 maka juz 30 tersebut di sebut manzil, apa bila para penghafal blum mencapai hafalan sampai 1 juz kemudian hafalan per’ayaat bisa di ulang kembali maka itu di sebut manzil untuk mengulang atau muroja’an hafalan yang sudah di hafalkan.</string>
</resources>