<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Edukasi.MetodeHafalanActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="4dp"
            card_view:cardMaxElevation="4dp"
            card_view:cardPreventCornerOverlap="true"
            card_view:contentPadding="10dp"
            card_view:cardUseCompatPadding="true"
            style="@style/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:fontFamily="sans-serif"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/semi_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="3 metode hafalan al quran:"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/a0"
                    android:padding="10dp"
                    android:text="@string/judul"
                    android:textColor="@color/semi_black"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_gravity="right"
                    android:layout_height="wrap_content" >
                </android.support.v7.widget.AppCompatTextView>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="4dp"
            card_view:cardMaxElevation="4dp"
            card_view:cardPreventCornerOverlap="true"
            card_view:contentPadding="10dp"
            card_view:cardUseCompatPadding="true"
            style="@style/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:fontFamily="sans-serif"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/semi_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="1. Metode Hafalan Sabaq :"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/a1"
                    android:padding="10dp"
                    android:textColor="@color/semi_black"
                    android:text="@string/sabaq"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_gravity="right"
                    android:layout_height="wrap_content" >
                </android.support.v7.widget.AppCompatTextView>

                <android.support.v7.widget.AppCompatTextView
                    android:padding="10dp"
                    android:textColor="@color/semi_black"
                    android:text="@string/sabaq1"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_gravity="right"
                    android:layout_height="wrap_content" >
                </android.support.v7.widget.AppCompatTextView>


                <android.support.v7.widget.AppCompatTextView
                    android:padding="10dp"
                    android:textColor="@color/semi_black"
                    android:text="@string/sabaq2"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_gravity="right"
                    android:layout_height="wrap_content" >
                </android.support.v7.widget.AppCompatTextView>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="4dp"
            card_view:cardMaxElevation="4dp"
            card_view:cardPreventCornerOverlap="true"
            card_view:contentPadding="10dp"
            card_view:cardUseCompatPadding="true"
            style="@style/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif"
                    android:text="2. Metode Hafalan Sabqi :"
                    android:textAllCaps="true"
                    android:textColor="@color/semi_black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/a2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:text="@string/sabqi"
                    android:textColor="@color/semi_black">

                </android.support.v7.widget.AppCompatTextView>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:text="@string/sabqi1"
                    android:textColor="@color/semi_black">

                </android.support.v7.widget.AppCompatTextView>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:text="@string/sabqi2"
                    android:textColor="@color/semi_black">

                </android.support.v7.widget.AppCompatTextView>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="4dp"
            card_view:cardMaxElevation="4dp"
            card_view:cardPreventCornerOverlap="true"
            card_view:contentPadding="10dp"
            card_view:cardUseCompatPadding="true"
            style="@style/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif"
                    android:text="3. Metode Hafalan Manzil :"
                    android:textAllCaps="true"
                    android:textColor="@color/semi_black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:text="@string/manzil"
                    android:textColor="@color/semi_black">

                </android.support.v7.widget.AppCompatTextView>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:text="@string/manzil1"
                    android:textColor="@color/semi_black">

                </android.support.v7.widget.AppCompatTextView>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:text="@string/manzil2"
                    android:textColor="@color/semi_black">

                </android.support.v7.widget.AppCompatTextView>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>


</ScrollView>